# SNANA

./: Makefile.am  configure.ac
src/: Makefile.am  genmag_PySEDMODEL.h  sndata.h  sntools.c  sntools.h  sntools_output.h  sntools_spectrograph.h
